src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Canale__c</fullName>
        <description>canale (Web, WebMobile, Ebay, ModoModoApp)</description>
        <label>Canale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carta_Fedelta__c</fullName>
        <description>codice carta</description>
        <label>Carta Fedelta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta_Contatto__c</fullName>
        <label>Citta Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta_Fatturazione__c</fullName>
        <description>città di fatturazione</description>
        <label>Citta Fatturazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta_Spedizione__c</fullName>
        <description>città di spedizione</description>
        <label>Citta Spedizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cod_Negozio_Consegna__c</fullName>
        <description>codice negozio di consegna</description>
        <label>Cod Negozio Consegna</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Fiscale_Contatto__c</fullName>
        <description>codice fiscale del contatto</description>
        <label>Codice Fiscale Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Fiscale_Fatturazione__c</fullName>
        <description>codice fiscale di fatturazione</description>
        <label>Codice Fiscale Fatturazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codici_Voucher__c</fullName>
        <description>codice voucher</description>
        <label>Codici Voucher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Contatto__c</fullName>
        <description>cognome del contatto</description>
        <label>Cognome Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consenso_Recesso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consenso Recesso</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Costo_Consegna_Prod__c</fullName>
        <description>costo totale di consegna prodotti</description>
        <label>Costo Consegna Prod</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costo_Consegna_Serv__c</fullName>
        <description>costo totale di consegna servizi</description>
        <label>Costo Consegna Serv</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costo_Consegna__c</fullName>
        <description>costo totale di consegna (consegna prodotti + consegna servizi)</description>
        <label>Costo Consegna</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costo_Pagamento__c</fullName>
        <description>Costo pagamento</description>
        <label>Costo Pagamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Creazione__c</fullName>
        <description>data creazione ordine</description>
        <label>Data Creazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Nascita_Contatto__c</fullName>
        <description>dato anagrafico del contatto</description>
        <label>Data Nascita Contatto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Nascita_Fatturazione__c</fullName>
        <description>dato anagrafico di fatturazione</description>
        <label>Data Nascita Fatturazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Nascita_Spedizione__c</fullName>
        <description>dato anagrafico di spedizione</description>
        <label>Data Nascita Spedizione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Contatto__c</fullName>
        <description>email del contatto</description>
        <label>Email Contatto</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Fatturazione__c</fullName>
        <description>email per la fatturazione</description>
        <label>Email Fatturazione</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Spedizione__c</fullName>
        <description>email per la spedizione</description>
        <label>Email Spedizione</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Indirizzo mail del cliente</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Linea1_Contatto__c</fullName>
        <description>indirizzo del contatto</description>
        <label>Linea1 Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linea1_Fatturazione__c</fullName>
        <description>indirizzo di fatturazione</description>
        <label>Linea1 Fatturazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linea1_Spedizione__c</fullName>
        <description>indirizzo di spedizione</description>
        <label>Linea1 Spedizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linea2_Contatto__c</fullName>
        <description>numero civico del contatto</description>
        <label>Linea2 Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linea2_Fatturazione__c</fullName>
        <description>numero civico di fatturazione</description>
        <label>Linea2 Fatturazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linea2_Spedizione__c</fullName>
        <description>numero civico di spedizione</description>
        <label>Linea2 Spedizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metodo_Pagamento__c</fullName>
        <description>metodo di pagamento</description>
        <label>Metodo Pagamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metodo_Spedizione__c</fullName>
        <description>metodo di spedizione</description>
        <label>Metodo Spedizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Contatto__c</fullName>
        <description>nome del contatto</description>
        <label>Nome Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Negozio_Consegna__c</fullName>
        <description>nome negozio di consegna</description>
        <label>Nome Negozio Consegna</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Ordine__c</fullName>
        <description>numero d&apos;ordine</description>
        <label>Numero Ordine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partita_Iva_Contatto__c</fullName>
        <description>partita iva del contatto</description>
        <label>Partita Iva Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partita_Iva_Fatturazione__c</fullName>
        <description>partita iva di fatturazione</description>
        <label>Partita Iva Fatturazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prenotazione__c</fullName>
        <description>codice di prenotazione</description>
        <label>Prenotazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prezzo_Totale__c</fullName>
        <description>importo totale ordine</description>
        <label>Prezzo Totale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promozioni_Applicate__c</fullName>
        <description>Elenco delle promozioni applicate all&apos;ordine</description>
        <label>Promozioni Applicate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia_Contatto__c</fullName>
        <description>provincia di provenienza del contatto</description>
        <label>Provincia Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia_Fatturazione__c</fullName>
        <description>provincia di fatturazione</description>
        <label>Provincia Fatturazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia_Spedizione__c</fullName>
        <description>Provincia di Spedizione</description>
        <label>Provincia Spedizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Punti_Guadagnati__c</fullName>
        <description>punti guadagnati con l&apos;ordine</description>
        <label>Punti Guadagnati</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punti_Spesi__c</fullName>
        <description>punti spesi con l&apos;ordine</description>
        <label>Punti Spesi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_Loyalty__c</fullName>
        <description>importo sconto legato alla carta loyalty</description>
        <label>Sconto Loyalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sesso_Contatto__c</fullName>
        <description>dato anagrafico del contatto</description>
        <label>Sesso Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sesso_Fatturazione__c</fullName>
        <description>dato anagrafico di fatturazione</description>
        <label>Sesso Fatturazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sesso_Spedizione__c</fullName>
        <description>Dato anagrafico di spedizione</description>
        <label>Sesso Spedizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stato_Ordine__c</fullName>
        <description>stato dell&apos;ordine</description>
        <label>Stato Ordine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotale_Prodotti__c</fullName>
        <description>importo totale ordine relativo ai prodotti</description>
        <label>Subtotale Prodotti</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotale_Servizi__c</fullName>
        <description>importo totale ordine relativo ai servizi</description>
        <label>Subtotale Servizi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotale__c</fullName>
        <description>importo totale ordine per prodotti e servizi</description>
        <label>Subtotale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telefono_Contatto__c</fullName>
        <description>telefono di riferimento del contatto</description>
        <label>Telefono Contatto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_Fatturazione__c</fullName>
        <description>telefono di riferimento per la fatturazione</description>
        <label>Telefono Fatturazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_Spedizione__c</fullName>
        <description>Telefono di riferimento per la spedizione</description>
        <label>Telefono Spedizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Totale_Sconti__c</fullName>
        <description>importo totale sconti applicati all&apos;ordine</description>
        <label>Totale Sconti</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Totale_da_Pagare__c</fullName>
        <description>Importo totale ordine da pagare</description>
        <label>Totale da Pagare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ultima_Modifica__c</fullName>
        <description>data ultima modifica</description>
        <label>Ultima Modifica</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>